baml_language/crates/baml_tests/snapshots/parser_constructors/baml_tests__parser_constructors__02_parser__array_constructor.snap
---
source: target/debug/build/baml_tests-0fbde5d1c173768c/out/generated_tests.rs
expression: output
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    WORD "class"
    WORD "Point"
    L_BRACE "{"
    FIELD
      WORD "x"
      TYPE_EXPR " int"
        WORD "int"
    FIELD
      WORD "y"
      TYPE_EXPR " int"
        WORD "int"
    R_BRACE "}"
  FUNCTION_DEF
    WORD "function"
    WORD "stringArray"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " string[]"
      WORD "string"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        ARRAY_LITERAL
          L_BRACKET "["
          STRING_LITERAL ""hello""
            QUOTE """
            WORD "hello"
            QUOTE """
          COMMA ","
          STRING_LITERAL " "world""
            QUOTE """
            WORD "world"
            QUOTE """
          COMMA ","
          STRING_LITERAL " "test""
            QUOTE """
            WORD "test"
            QUOTE """
          R_BRACKET "]"
        R_BRACE "}"
  FUNCTION_DEF
    WORD "function"
    WORD "intArray"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " int[]"
      WORD "int"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        ARRAY_LITERAL "
  [1, 2, 3]"
          L_BRACKET "["
          INTEGER "1"
          COMMA ","
          INTEGER "2"
          COMMA ","
          INTEGER "3"
          R_BRACKET "]"
        R_BRACE "}"
  FUNCTION_DEF
    WORD "function"
    WORD "floatArray"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " float[]"
      WORD "float"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        ARRAY_LITERAL "
  [1.0, 2.0, 3.0]"
          L_BRACKET "["
          FLOAT "1.0"
          COMMA ","
          FLOAT "2.0"
          COMMA ","
          FLOAT "3.0"
          R_BRACKET "]"
        R_BRACE "}"
  FUNCTION_DEF
    WORD "function"
    WORD "boolArray"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " bool[]"
      WORD "bool"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        ARRAY_LITERAL "
  [true, false, true]"
          L_BRACKET "["
          WORD "true"
          COMMA ","
          WORD "false"
          COMMA ","
          WORD "true"
          R_BRACKET "]"
        R_BRACE "}"
  FUNCTION_DEF
    WORD "function"
    WORD "pointArray"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR " Point[]"
      WORD "Point"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        ARRAY_LITERAL
          L_BRACKET "["
          OBJECT_LITERAL
            WORD "Point"
            L_BRACE "{"
            OBJECT_FIELD " x: 1"
              WORD "x"
              COLON ":"
              INTEGER "1"
            COMMA ","
            OBJECT_FIELD " y: 2"
              WORD "y"
              COLON ":"
              INTEGER "2"
            R_BRACE "}"
          COMMA ","
          OBJECT_LITERAL
            WORD "Point"
            L_BRACE "{"
            OBJECT_FIELD " x: 3"
              WORD "x"
              COLON ":"
              INTEGER "3"
            COMMA ","
            OBJECT_FIELD " y: 4"
              WORD "y"
              COLON ":"
              INTEGER "4"
            R_BRACE "}"
          COMMA ","
          OBJECT_LITERAL
            WORD "Point"
            L_BRACE "{"
            OBJECT_FIELD " x: 5"
              WORD "x"
              COLON ":"
              INTEGER "5"
            COMMA ","
            OBJECT_FIELD " y: 6"
              WORD "y"
              COLON ":"
              INTEGER "6"
            R_BRACE "}"
          R_BRACKET "]"
        R_BRACE "}"

=== ERRORS ===
None
